[package]
name = "sqr"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["compat"] }
tiberius = { version = "0.12", default-features = false, features = ["tds73", "time", "rustls"] }

azure_identity = "0.32"
azure_core = "0.32"

rust_xlsxwriter = "0.94"
sqlparser = { version = "0.61", features = ["visitor"] }

clap = { version = "4.4", features = ["cargo"] }
dotenv = "0.15.0"
uuid = { version = "1.0", features = ["v4"] }

[target.x86_64-pc-windows-msvc]
rustflags = ["-C", "target-feature=+crt-static"]

# Tell cargo-xwin to use the LLVM archiver available on macOS
ar = "llvm-ar"
linker = "lld-link"
